crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_constant_default_snapshot@unknown_constant_default_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class UnknownDefault(models.Model):
    id = models.IntegerField(primary_key=True)
    value = models.TextField()

    class Meta:
        managed = False
        db_table = "unknown_default"
