crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_constant_default_snapshot@unknown_constant_default_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const unknownDefault = pgTable("unknown_default", {
  id: integer("id").primaryKey(),
  value: text("value").notNull().default(sql`SOME_CONSTANT`),
});
