crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_constant_default_snapshot@unknown_constant_default_Jpa.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
import jakarta.persistence.*;

@Entity
@Table(name = "unknown_default")
public class UnknownDefault {

    @Id
    @Column(name = "id")
    private Integer id;

    @Column(name = "value", nullable = false, columnDefinition = "TEXT")
    private String value;

    protected UnknownDefault() {
    }
}
