crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_constant_default_snapshot@unknown_constant_default_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 219
expression: rendered
---
model UnknownDefault {
  id Int @id
  value String @default(dbgenerated("SOME_CONSTANT"))

  @@map("unknown_default")
}
