crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_constant_default_snapshot@unknown_constant_default_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "unknown_default")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    #[sea_orm(default_value = "SOME_CONSTANT")]
    pub value: String,
}

vespera::schema_type!(Schema from Model, name = "UnknownDefaultSchema");
impl ActiveModelBehavior for ActiveModel {}
