crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_constant_default_snapshot@unknown_constant_default_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlmodel import Field, SQLModel


class UnknownDefault(SQLModel, table=True):
    __tablename__ = "unknown_default"

    id: int = Field(primary_key=True)
    value: str = Field(sa_column_kwargs={"server_default": text("SOME_CONSTANT")})
