crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_function_default_snapshot@unknown_function_default_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const unknownDefaults = pgTable("unknown_defaults", {
  id: integer("id").primaryKey(),
  code: text("code").notNull().default(sql`gen_code()`),
});
