crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unknown_function_default_snapshot@unknown_function_default_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type UnknownDefaults struct {
	ID   int32  `gorm:"column:id;primaryKey" json:"id"`
	Code string `gorm:"column:code;not null;type:text" json:"code"`
}

func (UnknownDefaults) TableName() string { return "unknown_defaults" }
